--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     gtag('config', 'G-9HMM1DR4JE');
   </script>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link rel="icon" type="image/svg+xml" href="/pwa-icon.svg" />
+  <link rel="apple-touch-icon" href="/pwa-icon.svg" />
 
   <!-- Primary Meta Tags -->
   <title>Currículo Rápido | Criar Currículo Online Grátis PDF</title>
