feat: melhorias SEO, performance e acessibilidade - links internos, lazy loading, Service schema, analytics events, acessibilidade e meta description otimizada

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <title>Currículo Rápido | Criar Currículo Online Grátis PDF (Modelos 2025)</title>
   <meta name="title" content="Currículo Rápido | Criar Currículo Online Grátis PDF (Modelos 2025)">
   <meta name="description"
-    content="O melhor gerador de currículo grátis do Brasil (2025). Crie seu Curriculum Vitae (CV) em PDF para imprimir. Modelos de currículo prontos (Simples, Moderno, Jovem Aprendiz). Sem cadastro e funciona no celular. Baixe agora grátis!">
+    content="Crie seu currículo profissional grátis em minutos. Sem cadastro, sem marcas d'água. Modelos otimizados para ATS. Baixe em PDF agora!">
   <meta name="keywords"
     content="currículo rápido, fazer curriculo, criar curriculo gratis, curriculum vitae, modelo de curriculo, cv maker, curriculo pdf, primeiro emprego, gerador de cv, currículo pelo celular, modelo de currículo simples, currículo jovem aprendiz, currículo para estágio, currículo pronto, fazer curriculum, como fazer currículo, currículo grátis download, currículo em pdf, currículo sem cadastro, criar cv online, modelos de currículo 2025, currículo lates, currículo vittae, currículo vitae simples, app de currículo, currículo online grátis para imprimir">
   <meta name="robots" content="index, follow">
@@ -453,6 +453,30 @@
           },
           "articleSection": "Dicas de Carreira",
           "inLanguage": "pt-BR"
+        },
+        {
+          "@type": "Service",
+          "serviceType": "Criação de Currículo Profissional",
+          "name": "Gerador de Currículo Online Grátis",
+          "description": "Ferramenta gratuita para criar currículos profissionais em PDF otimizados para sistemas ATS.",
+          "provider": {
+            "@id": "https://curriculorapido.com.br/#organization"
+          },
+          "areaServed": {
+            "@type": "Country",
+            "name": "Brasil"
+          },
+          "availableChannel": {
+            "@type": "ServiceChannel",
+            "serviceUrl": "https://curriculorapido.com.br/",
+            "serviceType": "Online"
+          },
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "BRL",
+            "availability": "https://schema.org/InStock"
+          }
         }
       ]
     }
