--- a/index.html
+++ b/index.html
@@ -263,6 +263,18 @@
     }
   </script>
   <style>
+    /* --- Estilos Globais Base --- */
+    html, body {
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      height: 100%;
+    }
+    
+    #root {
+      min-height: 100vh;
+    }
+
     /* --- Estilos Globais de Scrollbar --- */
     .custom-scrollbar::-webkit-scrollbar {
       width: 8px;
