--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
   <!-- Robots.txt reference -->
   <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
   
-  <!-- Multi-language hreflang -->
-  <link rel="alternate" hreflang="pt-BR" href="https://curriculorapido.com.br/" />
-  <link rel="alternate" hreflang="en-US" href="https://curriculorapido.com.br/" />
-  <link rel="alternate" hreflang="es-ES" href="https://curriculorapido.com.br/" />
-  <link rel="alternate" hreflang="x-default" href="https://curriculorapido.com.br/" />
+  <!-- Site focused on Brazil - Portuguese only -->
 
   <!-- Performance Optimizations -->
   <link rel="preconnect" href="https://cdn.tailwindcss.com">
@@ -93,7 +89,7 @@
             "@type": "ContactPoint",
             "contactType": "Customer Service",
             "areaServed": "BR",
-            "availableLanguage": ["pt-BR", "en-US", "es-ES"]
+            "availableLanguage": ["pt-BR"]
           }
         },
         {
@@ -105,7 +101,7 @@
           "publisher": {
             "@id": "https://curriculorapido.com.br/#organization"
           },
-          "inLanguage": ["pt-BR", "en-US", "es-ES"],
+          "inLanguage": "pt-BR",
           "potentialAction": {
             "@type": "SearchAction",
             "target": "https://curriculorapido.com.br/?q={search_term_string}",
