--- a/index.html
+++ b/index.html
@@ -290,6 +290,22 @@
       background: #94a3b8;
     }
 
+    /* --- Toast Animations --- */
+    @keyframes slide-in {
+      from {
+        transform: translateX(100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateX(0);
+        opacity: 1;
+      }
+    }
+
+    .animate-slide-in {
+      animation: slide-in 0.3s ease-out;
+    }
+
     /* --- Configuração de Impressão e PDF --- */
 
     /* Oculta a área de impressão na tela normal */
